# testing_template

./: .coverage  LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yaml
src/project_name/: main.py
src/project_name.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_main.py
