# basic
[metadata]
name = project_name
description = project description
author = Filip Matejko
license = MIT
license_file = LICENSE
platforms = win32, win64, linux
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = 
    project_name

install_requirements =
    numpy

python_requires = 
    >=3.6

package_dir =
    =src
    
zip_safe = no

# testing
[options.extras_require]
testing =
    flake8>=4.0
    tox>=3.25.0
    pytest>=6.0
    pytest-cov>=3.0.0
    mypy>=0.942

[options.package_data]
bio_statistics = py.typed

[flake8]
max-line-length = 160